--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,40 @@
-version: '3.8'
-
 services:
   python_app:
-    image: python:3.11-slim
+    image: python:3.11
     container_name: python_with_polars
     volumes:
       - .:/app
     working_dir: /app
-    command: sh -c "pip install --no-cache-dir . && python test.py"
+    command: sh -c "pip install --no-cache-dir . && python main.py"
     environment:
       - PYTHONUNBUFFERED=1
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=example_password
+    depends_on:
+      - neo4j
+
+  neo4j:
+    image: neo4j:5.18
+    container_name: neo4j_db
+    restart: unless-stopped
+    ports:
+      - "7474:7474"   # Neo4j Browser (web UI)
+      - "7687:7687"   # Bolt protocol for drivers
+    environment:
+      - NEO4J_AUTH=neo4j/example_password
+      - NEO4J_dbms_memory_pagecache_size=1G
+      - NEO4J_dbms_memory_heap_initial__size=1G
+      - NEO4J_dbms_memory_heap_max__size=1G
+    volumes:
+      - neo4j_data:/data
+      - neo4j_logs:/logs
+      - neo4j_import:/var/lib/neo4j/import
+      - neo4j_plugins:/plugins
+
+volumes:
+  neo4j_data:
+  neo4j_logs:
+  neo4j_import:
+  neo4j_plugins:
+
