--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "neo4j>=6.0.3",
     "polars>=1.35.2",
     "pytest>=9.0.1",
 ]
