--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.124.2",
     "neo4j>=6.0.3",
+    "pandas>=2.3.3",
     "polars>=1.35.2",
+    "pyarrow>=22.0.0",
     "pytest>=9.0.1",
+    "uvicorn>=0.38.0",
 ]
