--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,13 @@
 services:
-  python_app:
+  mypy:
     image: python:3.11
+    container_name: mypy_checker
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: sh -c "pip install --no-cache-dir . mypy && mypy ."
+  python_app:
+    image: python:3.11-slim-buster
     container_name: python_with_polars
     volumes:
       - .:/app
