--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.124.2",
+    "mypy>=1.19.0",
     "neo4j>=6.0.3",
     "pandas>=2.3.3",
     "polars>=1.35.2",
@@ -13,3 +14,8 @@ dependencies = [
     "pytest>=9.0.1",
     "uvicorn>=0.38.0",
 ]
+[tool.mypy]
+python_version = "3.13"
+disallow_untyped_defs = true
+strict = true
+ignore_missing_imports = true
