--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,5 @@ dependencies = [
 [tool.mypy]
 python_version = "3.13"
 disallow_untyped_defs = true
-strict = true
+strict = false
 ignore_missing_imports = true
