--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,26 @@ services:
       - .:/app
     working_dir: /app
     command: sh -c "uv pip install --no-cache-dir . mypy && mypy ."
+  pytest:
+    image: python:3.11-slim-buster
+    container_name: app_tester
+    volumes:
+      - .:/app # Mount your app code and tests
+    working_dir: /app
+    # Install dependencies and then run pytest
+    # NOTE: Ensure your project's setup.py or requirements.txt includes pytest
+    command: sh -c "uv pip install --no-cache-dir . pytest && pytest tests/"
+    environment:
+      - PYTHONUNBUFFERED=1
+      # Pass the connection details needed by your tests (e.g., app/db.py)
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=example_password
+    depends_on:
+      # Ensures the database container is up before running tests
+      neo4j:
+        condition: service_started # Recommended: wait until healthcheck passes
+                                  # If you don't define a healthcheck on neo4j, use 'service_started'
   python_app:
     image: python:3.11-slim-buster
     container_name: python_with_polars
