--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,20 @@
 services:
   mypy:
-    image: python:3.13-slim-buster
+    image: python:3.13-slim-trixie
     container_name: mypy_checker
     volumes:
       - .:/app
     working_dir: /app
-    command: sh -c "uv pip install --no-cache-dir . mypy && mypy ."
+    command: sh -c "pip install --no-cache-dir uv && uv pip install --no-cache-dir . mypy --system && mypy --explicit-package-bases ."
   pytest:
-    image: python:3.13-slim-buster
+    image: python:3.13-slim-trixie
     container_name: app_tester
     volumes:
       - .:/app # Mount your app code and tests
     working_dir: /app
     # Install dependencies and then run pytest
     # NOTE: Ensure your project's setup.py or requirements.txt includes pytest
-    command: sh -c "uv pip install --no-cache-dir . pytest && pytest tests/"
+    command: sh -c "pip install --no-cache-dir uv && uv pip install --no-cache-dir . pytest --system && pytest test.py"
     environment:
       - PYTHONUNBUFFERED=1
       # Pass the connection details needed by your tests (e.g., app/db.py)
@@ -27,26 +27,26 @@ services:
         condition: service_healthy # Recommended: wait until healthcheck passes
                                   # If you don't define a healthcheck on neo4j, use 'service_started'
   python_app:
-    image: python:3.13-slim-buster
+    image: python:3.13-slim-trixie
     container_name: python_with_polars
     volumes:
       - .:/app
     working_dir: /app
-    command: sh -c "uv pip install --no-cache-dir . && python main.py"
+    command: sh -c "pip install --no-cache-dir uv && uv pip install --no-cache-dir . --system && big-data-final"
     environment:
       - PYTHONUNBUFFERED=1
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=example_password
     depends_on:
-      - neo4j
+      neo4j:
+        condition: service_healthy
 
   neo4j:
     image: neo4j:5.18
     container_name: neo4j_db
     restart: unless-stopped
     ports:
-      - "7474:7474"   # Neo4j Browser (web UI)
       - "7687:7687"   # Bolt protocol for drivers
     environment:
       - NEO4J_AUTH=neo4j/example_password
@@ -55,7 +55,7 @@ services:
       - NEO4J_dbms_memory_heap_max__size=1G
     
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--spider", "http://localhost:7687"]
+      test: ["CMD", "wget", "--no-verbose", "--spider", "http://localhost:7474"]
       interval: 10s
       timeout: 5s
       retries: 10
