--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,9 +32,12 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    command: sh -c "pip install --no-cache-dir uv && uv pip install --no-cache-dir . --system && big-data-final"
+    command: sh -c "pip install --no-cache-dir uv && uv pip install --no-cache-dir . --system && uvicorn app.api:app --app-dir src --host 0.0.0.0 --port 8000"
+    ports:
+      - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
+      - PYTHONPATH=src
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=example_password
