--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.124.2",
+    "matplotlib>=3.10.8",
     "mypy>=1.19.0",
     "neo4j>=6.0.3",
+    "numpy>=2.3.5",
     "pandas>=2.3.3",
     "polars>=1.35.2",
     "pyarrow>=22.0.0",
