--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,6 +41,11 @@ services:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=example_password
+      # Serve dashboard aggregated summary from Neo4j (Big Data system)
+      - FLYWIRE_SUMMARY_SOURCE=neo4j
+      - FLYWIRE_SUMMARY_DATASET_ID=flywire
+      # Force dashboard pairs endpoint to read from Neo4j (Big Data system)
+      - FLYWIRE_PAIRS_SOURCE=neo4j
     depends_on:
       neo4j:
         condition: service_healthy
