--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,22 +10,19 @@ services:
     image: python:3.13-slim-trixie
     container_name: app_tester
     volumes:
-      - .:/app # Mount your app code and tests
+      - .:/app 
     working_dir: /app
     # Install dependencies and then run pytest
-    # NOTE: Ensure your project's setup.py or requirements.txt includes pytest
     command: sh -c "pip install --no-cache-dir uv && uv pip install --no-cache-dir . pytest --system && pytest test.py"
     environment:
       - PYTHONUNBUFFERED=1
-      # Pass the connection details needed by your tests (e.g., app/db.py)
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=example_password
     depends_on:
       # Ensures the database container is up before running tests
       neo4j:
-        condition: service_healthy # Recommended: wait until healthcheck passes
-                                  # If you don't define a healthcheck on neo4j, use 'service_started'
+        condition: service_healthy 
   python_app:
     image: python:3.13-slim-trixie
     container_name: python_with_polars
@@ -41,10 +38,10 @@ services:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=example_password
-      # Serve dashboard aggregated summary from Neo4j (Big Data system)
+      # Serve dashboard aggregated summary from Neo4j 
       - FLYWIRE_SUMMARY_SOURCE=neo4j
       - FLYWIRE_SUMMARY_DATASET_ID=flywire
-      # Force dashboard pairs endpoint to read from Neo4j (Big Data system)
+      # Force dashboard pairs endpoint to read from Neo4j
       - FLYWIRE_PAIRS_SOURCE=neo4j
     depends_on:
       neo4j:
