--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.124.2",
+    "httpx>=0.28.1",
     "matplotlib>=3.10.8",
     "mypy>=1.19.0",
     "neo4j>=6.0.3",
@@ -27,3 +28,10 @@ package-dir = {"" = "src"}
 [project.scripts]
 # Define a script named 'big-data-final' that runs your main function
 "big-data-final" = "app.main:main"
+
+[tool.pytest.ini_options]
+python_files = [
+    "test.py",
+    "test_*.py",
+    "*_test.py",
+]
